En la aplicación home ya se agregó el data frame como una tabla (Usando bootstrap table) la cual permite buscar, paginar y ordenar. A la tabla no se le ha dado aùn ningun estilo. Para que esto funcione se necita tener sodapy y pandas (junto con dependencias) instalados.

--- a/WebServices/static/css/color/green.css
+++ b/WebServices/static/css/color/green.css
@@ -38,6 +38,7 @@ VERSION : 1.1
 {
     color:#fff;
 }
+
 .black-background
 {
     background-color:#000;
@@ -46,6 +47,11 @@ VERSION : 1.1
 .white-background
 {
     background-color:#fff;
+}
+
+.rose-background
+{
+    background-color:#ff0080;
 }
 
 .grey
