--- a/WebServices/templates/home/index.html
+++ b/WebServices/templates/home/index.html
@@ -28,6 +28,9 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/responsive.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/color/green.css' %}">
+
+    <!-- Boostrap-table --->
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.14.2/dist/bootstrap-table.min.css">
         
 </head>
 <body >
@@ -61,7 +64,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand" href="index.html">AM-<span class="black">D</span></a>
+            <a class="navbar-brand">Capturas<span class="black">Colombia</span></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -95,20 +98,17 @@
       <div class="container">
           <div class="row">
               <div class="col-md-12 text-center">
-                 <h1 class="text-capitalize bigFont" data-scroll-reveal="wait 0.45s, then enter top and move 80px over 1s">Discover the Feature</h1>
+                 <h1 class="text-capitalize bigFont" data-scroll-reveal="wait 0.45s, then enter top and move 80px over 1s">Analiza los datos</h1>
 
-                <p class="intro" data-scroll-reveal="wait 0.45s, then enter left and move 80px over 1s">Get early access to over 1000 music albums each month.</p>
+                <p class="intro" data-scroll-reveal="wait 0.45s, then enter left and move 80px over 1s">Descubre, Consulta, Visualiza.</p>
               </div>
               
               <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
                         <div class="text-center top40">
-                            <a href="#" class="btn btns white-background themecolor fadeInDown">App Store</a>
-                            <a href="#" class=" btn btns theme_background_color white fadeInLeft">Google Play</a>
-                            <a href="#" class="btn btns black-background white fadeInRight">Signup Free</a>
-
+                            <a href="https://www.datos.gov.co/" target="_blank" class="btn btns rose-background themecolor white fadeInDown">Datos Abiertos</a>
+                            <a href="https://www.datos.gov.co/" target="_blank" class=" btn btns theme_background_color white fadeInLeft">Datos Abiertos</a>
                         </div>
-                    </div>
-              
+                    </div> 
           </div>
       </div>
     </div>
@@ -125,93 +125,19 @@
   <section class="mobile-app theme_background_color" id="feature">
       <div class="container">
             <div class="row text-center">
-                <div class="app-heading">
-                    <h2 class="sectionTitle">Awesome Features of AM-D</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-sm-12 featured-content">
-                    <div class="app-icon-box">
-
-                        <div class="app-content-phone text-right">
-                            <h4>24h support Support</h4>
-
-                            <p>
-                               Lorum ipsum kodiu iklk ipsm logum lorum ipsusm serveice siourum ipsum koud.
-                            </p>
-                        </div>
-                        <div class="app-icon">
-                            <span class="themecolor text-center"><i class="fa fa-diamond"></i></span>
-                        </div>
-                    </div>
-                    <div class="app-icon-box">
-
-                        <div class="app-content-phone text-right">
-                            <h4>Tutorials</h4>
-
-                            <p>
-                               Lorum ipsum kodiu iklk ipsm logum lorum ipsusm serveice siourum ipsum koud.
-                            </p>
-                        </div>
-                        <div class="app-icon">
-                           <span class="themecolor text-center"><i class="fa fa-video-camera"></i></span>
-                        </div>
-                    </div>
-                    <div class="app-icon-box">
-
-                        <div class="app-content-phone text-right">
-                            <h4>Creative Design</h4>
-
-                            <p>
-                               Lorum ipsum kodiu iklk ipsm logum lorum ipsusm serveice siourum ipsum koud.
-                            </p>
-                        </div>
-                        <div class="app-icon">
-                            <span class="themecolor text-center"><i class="fa fa-delicious"></i></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-12">
-                    <img src="images/iphone6-plus.png" class="iphone-image" alt="iPhpone" data-scroll-reveal="wait 0.45s, then enter top and move 80px over 1s">
-                </div>
-                <div class="col-md-4 col-sm-12 featured-content">
-                    <div class="app-icon-box">
-                        <div class="app-icon">
-                            <span class="themecolor text-center"><i class="fa fa-anchor"></i></span>
-                        </div>
-                        <div class="app-content">
-                            <h4>Easy Tuchon Mobile</h4>
-
-                            <p>
-                               Lorum ipsum kodiu iklk ipsm logum lorum ipsusm serveice siourum ipsum koud.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="app-icon-box">
-                        <div class="app-icon">
-                            <span class="themecolor text-center"><i class="fa fa-gears"></i></span>
-                        </div>
-                        <div class="app-content">
-                            <h4>Easy Cutomization</h4>
-
-                            <p>
-                                Lorum ipsum kodiu iklk ipsm logum lorum ipsusm serveice siourum ipsum koud.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="app-icon-box">
-                        <div class="app-icon">
-                            <span class="themecolor text-center"><i class="fa fa-desktop"></i></span>
-                        </div>
-                        <div class="app-content">
-                            <h4>Responsive Layout</h4>
-
-                            <p>
-                                Lorum ipsum kodiu iklk ipsm logum lorum ipsusm serveice siourum ipsum koud.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                <table
+                id='dataframe'
+                data-toggle="table"
+                data-pagination="true"
+                data-search="true">
+                    <thead>
+                        <tr>
+                            {% for name in data_frame.columns %}
+                                <th data-sortable="true" data-field={{ name }}>{{ name }}</th>
+                            {% endfor %}
+                        </tr>
+                    </thead>
+                </table>
             </div>
         </div>
   </section>
@@ -782,18 +708,14 @@
 					<div class="container">
 						<div class="footer-info col-md-12 text-center">
 							<ul>
-								<li><a href="#">Manchester,ny 14608</a></li>
-								<li><a href="#">+580-698-5024</a></li>
-								<li><a href="#">yourplugins@gmail.com</a></li>
+								<li><a href="#">Repositorio del proyecto</a></li>
+								<li><a href="#">mauricio.castano@utp.edu.co</a></li>
+                                <li><a href="#">ladytrejos@utp.edu.co</a></li>
 							</ul>
 						</div>
 						<div class="footer-social-icons col-md-12 text-center">
 							<ul>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-								<li><a href="#"><i class="fa fa-rss"></i></a></li>
+								<li><a href="https://github.com/LadyTrejos/WebService" target="_blank"><i class="fa fa-github"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -805,25 +727,13 @@
  <section class="sub-footer">
 					<div class="container">
 						<div class="copyright-text col-md-6 col-sm-6 col-xs-12">
-							<p>© 2014 AM-D. All rights reserved.</p>
-						</div>
-						<div class="designed-by col-md-6 col-sm-6 col-xs-12">
-							<p>Designed by: <a href="#">YOUR PLUGIN</a></p>
+							<p>© 2019 CapturasColombia. All rights reserved.</p>
 						</div>
 					</div>
 				</section>
  
  <!-- [/FOOTER]
 =============================================================================================================================-->
- 
- 
- 
- 
- 
- 
- 
- 
- 
 </div>
  
 
@@ -836,12 +746,18 @@
         <script src="{% static 'library/bootstrap/js/bootstrap.js' %}"></script>
 	<script type="text/javascript" src="{%static 'js/jquery.easing.1.3.js' %}"></script>
         <script src="{% static 'library/vegas/vegas.min.js' %}"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.14.2/dist/bootstrap-table.min.js"></script>
 	
     <!-- [ PLUGIN SCRIPT ] -->    
 	<script src="{% static 'js/plugins.js' %}"></script>
         <script src="{% static 'js/fappear.js' %}"></script>
        <script src="{% static 'js/jquery.countTo.js' %}"></script>
 	<script src="{% static 'js/scrollreveal.js' %}"></script>
+    <script>
+        $('#dataframe').bootstrapTable({
+            data: {{ json|safe }}
+        })
+    </script>
     
     <!-- [ COMMON SCRIPT ] -->
 	<script src="{% static 'js/common.js' %}"></script>
