--- a/WebServices/templates/home/index.html
+++ b/WebServices/templates/home/index.html
@@ -100,12 +100,11 @@
               <div class="col-md-12 text-center">
                  <h1 class="text-capitalize bigFont" data-scroll-reveal="wait 0.45s, then enter top and move 80px over 1s">Analiza los datos</h1>
 
-                <p class="intro" data-scroll-reveal="wait 0.45s, then enter left and move 80px over 1s">Descubre, Consulta, Visualiza.</p>
+                <p class="intro" data-scroll-reveal="wait 0.45s, then enter left and move 80px over 1s">Descubre, Consulta y Visualiza.</p>
               </div>
               
               <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
                         <div class="text-center top40">
-                            <a href="https://www.datos.gov.co/" target="_blank" class="btn btns rose-background themecolor white fadeInDown">Datos Abiertos</a>
                             <a href="https://www.datos.gov.co/" target="_blank" class=" btn btns theme_background_color white fadeInLeft">Datos Abiertos</a>
                         </div>
                     </div> 
@@ -130,7 +129,7 @@
                 data-toggle="table"
                 data-pagination="true"
                 data-search="true">
-                    <thead>
+                    <thead style="background-color: #03591e">
                         <tr>
                             {% for name in data_frame.columns %}
                                 <th data-sortable="true" data-field={{ name }}>{{ name }}</th>
@@ -755,7 +754,8 @@
 	<script src="{% static 'js/scrollreveal.js' %}"></script>
     <script>
         $('#dataframe').bootstrapTable({
-            data: {{ json|safe }}
+            data: {{ json|safe }},
+            classes: 'table table-bordered table-sm',
         })
     </script>
     
