Se creó la primera gráfica. Un diagrama de barras para ver la cantidad de delitos por género. Aún no se ha creado ningún layout ni se han agregado herramientas de bokeh. Se ajusto la paleta de colores BuGn que son colores azules y verdes.

--- a/WebServices/templates/home/index.html
+++ b/WebServices/templates/home/index.html
@@ -80,7 +80,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#home" class="page-scroll">Home</a></li>
+                        <li><a href="#home" class="page-scroll">Inicio</a></li>
                         <li><a href="#descripcion" class="page-scroll">Descripción</a></li>
                         <li><a href="#visualizacion" class="page-scroll">Visualización</a></li>
                     </ul>
@@ -129,17 +129,17 @@
                     <div class="row">
                         <div class="col-md-8" style="text-align: left;">
                             <p>
-                                Los datos que se incluyen y tratan en este sitio web pertenecen al conjunto de datos capturas (correspondiente al año 2018) proporcionado y mantenido por la dirección general de la Policía Nacial de Colombia.
+                                Los datos que se incluyen y tratan en este sitio web pertenecen al conjunto de datos capturas (correspondiente al año 2018) proporcionado y mantenido por la dirección general de la Policía Nacional de Colombia.
                             </p>
                             <p>
-                                El conjunto de datos <a href="https://www.datos.gov.co/Seguridad-y-Defensa/Capturas-2018/qa6k-wzms" target="_blank">Capturas2018</a> se encuentra disponible en la página web de datos abiertos de Colombia. Este conjunto posee 226.000 registros con 17 diferentes columnas que presentan datos sobre el tipo de délito, el lugar, la edad del capturado, escolaridad y demás.
+                                El conjunto de datos <a href="https://www.datos.gov.co/Seguridad-y-Defensa/Capturas-2018/qa6k-wzms" target="_blank">Capturas 2018</a> se encuentra disponible en la página web de datos abiertos de Colombia. Este conjunto posee 226.000 registros con 17 diferentes columnas que presentan datos sobre el tipo de delito, el lugar, la edad del capturado y demás.
                             </p>
                             <p>
                                 En la tabla de abajo se pueden ver los registros de las diferentes capturas. Si se desea es posible ordenar los datos o buscar registros, para esto solo es necesario escribir en el cuadro de búsqueda y el sistema mostrará los registros que coincidan en alguna de sus columnas.
                             </p>
                         </div>
                     </div>
-                    <div style="color: #000;">
+                    <div class="col-md-12 text-center" style="color: #000;">
                         <table
                         id='dataframe'
                         data-toggle="table"
