Se agregó un selecto para cambiar el tipo de gráfica dinamicamente. ESte aún no tiene clases, por lo que posee problemas en la visualización de la ltetra. La gráfica aún no cambia solo se puso el select de bokeh.

--- a/WebServices/templates/home/index.html
+++ b/WebServices/templates/home/index.html
@@ -174,13 +174,13 @@
         <section class="why-love theme_background_color" id="visualizacion">
             <div class="overlay">
                 <div class="container">
-                    <div class="row text-center">
+                    <div class="row text-center" style="color: #000;">
                         <div class="WhyLove-heading text-center">
                             <h2 class="sectionTitle">Visualización y Análisis de los datos</h2>
                         </div>
-                    </div>
                     <!-- Bokeh div -->
-                    {{ bokehDiv|safe }}          
+                    {{ bokehDiv|safe }}
+                    </div>        
                 </div>
             </div>
         </section>
