Se cambió la url base para que se cargue el login. Se agregaron el resto de graficas categoricas, se excluyeron barrio y municipio por ser muchas las categorias. Para crear las graficas categoricas se creó una función genérica.

--- a/WebServices/static/css/style.css
+++ b/WebServices/static/css/style.css
@@ -700,6 +700,17 @@ span.round-tabs.five {
 }
 
 
+/* classes for the Select widget of Bokeh 
+--------------------------------------------*/
+
+.select {
+    color: #000;
+}
+.select>div>label {
+    color: #fff;
+}
+
+
 
 /*	WHY LOVE
 ------------------------------*/
